Bootstrapで見た目を整える

--- a/app/views/contract_histories/_contract_history.html.erb
+++ b/app/views/contract_histories/_contract_history.html.erb
@@ -1,21 +1,21 @@
 <div id="<%= dom_id contract_history %>">
   <p>
-    <strong>Company:</strong>
+    <strong>電力会社:</strong>
     <%= contract_history.company %>
   </p>
 
   <p>
-    <strong>Plan:</strong>
+    <strong>電気料金プラン:</strong>
     <%= contract_history.plan %>
   </p>
 
   <p>
-    <strong>Ampere:</strong>
-    <%= contract_history.ampere %>
+    <strong>契約容量:</strong>
+    <%= contract_history.ampere %>A
   </p>
 
   <p>
-    <strong>Start at:</strong>
+    <strong>契約開始日:</strong>
     <%= contract_history.start_at %>
   </p>
 
