--- a/app/views/contract_histories/edit.html.erb
+++ b/app/views/contract_histories/edit.html.erb
@@ -1,10 +1,10 @@
-<h1>Editing contract history</h1>
+<h1>契約履歴を編集</h1>
 
 <%= render "form", contract_history: @contract_history %>
 
 <br>
 
 <div>
-  <%= link_to "Show this contract history", @contract_history %> |
-  <%= link_to "Back to contract histories", contract_histories_path %>
+  <%= link_to "詳細", @contract_history %> |
+  <%= link_to "契約履歴一覧に戻る", contract_histories_path %>
 </div>
