--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "header" %>
+    <div class="container mt-4">
+      <%= render "flash" %>
+      <%= yield %>
+    </div>
   </body>
 </html>
