--- a/app/views/contract_histories/new.html.erb
+++ b/app/views/contract_histories/new.html.erb
@@ -1,9 +1,9 @@
-<h1>New contract history</h1>
+<h1>契約履歴を追加</h1>
 
 <%= render "form", contract_history: @contract_history %>
 
 <br>
 
 <div>
-  <%= link_to "Back to contract histories", contract_histories_path %>
+  <%= link_to "契約履歴一覧に戻る", contract_histories_path %>
 </div>
