--- a/app/views/contract_histories/edit.html.erb
+++ b/app/views/contract_histories/edit.html.erb
@@ -2,9 +2,7 @@
 
 <%= render "form", contract_history: @contract_history %>
 
-<br>
-
-<div>
+<div class="mt-2">
   <%= link_to "詳細", @contract_history %> |
   <%= link_to "契約履歴一覧に戻る", contract_histories_path %>
 </div>
