--- a/app/views/contract_histories/index.html.erb
+++ b/app/views/contract_histories/index.html.erb
@@ -1,33 +1,17 @@
 <h1>契約履歴</h1>
 
 <div id="contract_histories" class="table-responsive">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>電力会社</th>
-        <th>電気料金プラン</th>
-        <th>契約容量</th>
-        <th>契約開始日</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @contract_histories.each do |contract_history| %>
-        <tr>
-          <td><%= contract_history.company %></td>
-          <td><%= contract_history.plan %></td>
-          <td><%= contract_history.ampere %>A</td>
-          <td><%= contract_history.start_at %></td>
-          <td>
-            <div class="d-flex gap-2">
-              <%= link_to "編集", edit_contract_history_path(contract_history), class: "btn btn-sm btn-primary" %>
-              <%= button_to "削除", contract_history, method: :delete, class: "btn btn-sm btn-danger" %>
-            </div>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <div style="min-width: 800px;">
+    <div class="row py-2 border-bottom">
+      <div class="col-3 fw-bold">電力会社</div>
+      <div class="col-3 fw-bold">電気料金プラン</div>
+      <div class="col-2 fw-bold">契約容量</div>
+      <div class="col-2 fw-bold">契約開始日</div>
+    </div>
+    <%= render @contract_histories %>
+  </div>
 </div>
 
-<%= link_to "契約履歴を追加する", new_contract_history_path, class: "btn btn-primary" %>
+<div class="mt-4">
+  <%= link_to "契約履歴を追加する", new_contract_history_path, class: "btn btn-primary" %>
+</div>
