--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <%= render "header" %>
     <div class="container mt-4">
-      <%= render "flash" %>
+      <div id="flash">
+        <%= render "flash" %>
+      </div>
       <%= yield %>
     </div>
   </body>
