--- a/app/views/contract_histories/_contract_history.html.erb
+++ b/app/views/contract_histories/_contract_history.html.erb
@@ -6,8 +6,18 @@
     <div class="col-2"><%= contract_history.start_at %></div>
     <div class="col-2">
       <div class="d-flex gap-2">
-        <%= link_to "編集", edit_contract_history_path(contract_history), class: "btn btn-sm btn-primary" %>
-        <%= button_to "削除", contract_history, method: :delete, class: "btn btn-sm btn-danger" %>
+        <%= link_to "編集",
+          edit_contract_history_path(contract_history),
+          class: "btn btn-sm btn-primary"
+        %>
+        <%= link_to "削除",
+          contract_history,
+          class: "btn btn-sm btn-danger",
+          data: {
+            turbo_method: :delete,
+            turbo_confirm: "削除しますか？"
+          }
+        %>
       </div>
     </div>
   </div>
