--- a/app/views/contract_histories/index.html.erb
+++ b/app/views/contract_histories/index.html.erb
@@ -1,17 +1,23 @@
 <h1>契約履歴</h1>
 
-<div id="contract_histories" class="table-responsive">
+<div class="table-responsive">
   <div style="min-width: 800px;">
     <div class="row py-2 border-bottom">
       <div class="col-3 fw-bold">電力会社</div>
       <div class="col-3 fw-bold">電気料金プラン</div>
       <div class="col-2 fw-bold">契約容量</div>
       <div class="col-2 fw-bold">契約開始日</div>
+      <div class="col-2 fw-bold">
+        <%= link_to "新規追加",
+          new_contract_history_path,
+          class: "btn btn-sm btn-primary",
+          data: { turbo_frame: dom_id(ContractHistory.new) }
+        %>
+      </div>
     </div>
-    <%= render @contract_histories %>
+    <%= turbo_frame_tag ContractHistory.new %>
+    <div id="contract_histories">
+      <%= render @contract_histories %>
+    </div>
   </div>
-</div>
-
-<div class="mt-4">
-  <%= link_to "契約履歴を追加する", new_contract_history_path, class: "btn btn-primary" %>
 </div>
