--- a/app/views/electricity_bills/_form.html.erb
+++ b/app/views/electricity_bills/_form.html.erb
@@ -1,27 +1,26 @@
-<%= form_with(model: electricity_bill) do |form| %>
-  <% if electricity_bill.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(electricity_bill.errors.count, "error") %> prohibited this electricity_bill from being saved:</h2>
-
-      <ul>
-        <% electricity_bill.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<%= turbo_frame_tag electricity_bill do %>
+  <%= bootstrap_form_with(model: electricity_bill) do |form| %>
+    <div class="row py-2 border-bottom">
+      <div class="col-4">
+        <%= form.month_field :month,
+          skip_label: true,
+          label_as_placeholder: true,
+          wrapper: false
+        %>
+      </div>
+      <div class="col-4">
+        <%= form.number_field :amount,
+          skip_label: true,
+          label_as_placeholder: true,
+          wrapper: false
+        %>
+      </div>
+      <div class="col-4">
+        <div class="d-flex gap-2">
+          <%= form.primary class: "btn btn-sm btn-primary" %>
+          <%= link_to "キャンセル", electricity_bill, class: "btn btn-sm btn-secondary" %>
+        </div>
+      </div>
     </div>
   <% end %>
-
-  <div>
-    <%= form.label :month, style: "display: block" %>
-    <%= form.date_field :month %>
-  </div>
-
-  <div>
-    <%= form.label :amount, style: "display: block" %>
-    <%= form.number_field :amount %>
-  </div>
-
-  <div>
-    <%= form.submit %>
-  </div>
 <% end %>
